# opengl-android

./: .gitattributes  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/opengl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/opengl/: BasicActivity.java  CameraActivity.java  (+38 more)
app/src/main/res/layout/: act_basic_lighting_diffuse.xml  act_basic_lighting_specular.xml  act_camera.xml  act_camera_circle.xml  act_camera_fov.xml  act_camera_keyboard.xml  act_camera_position.xml  act_camera_view.xml  act_light_sample.xml  activity_main.xml  item_camera.xml
app/src/main/res/raw/: frag_basic_lighting_ambient.glsl  frag_basic_lighting_diffuse.glsl  frag_basic_lighting_specular.glsl  frag_coloured_wooden_box.glsl  frag_coordinate_systems.glsl  frag_dynamic_color_triangle.glsl  frag_laughing_wooden_box.glsl  frag_light_casters_directional.glsl  frag_light_casters_point.glsl  frag_light_casters_spot.glsl  frag_light_casters_spot_soft.glsl  frag_light_cube.glsl  frag_light_sample.glsl  frag_lighting_maps_diffuse.glsl  frag_lighting_maps_specular.glsl  frag_material.glsl  frag_material_and_light.glsl  frag_material_with_light_change.glsl  frag_materials.glsl  frag_model_loading.glsl  frag_multiple_lights.glsl  frag_rgb_triangle.glsl  frag_texture_transform.glsl  frag_triangle.glsl  frag_triangle_red.glsl  frag_wooden_box.glsl  vertex_basic_lighting_ambient.glsl  vertex_basic_lighting_diffuse.glsl  vertex_basic_lighting_specular.glsl  vertex_coordinate_systems.glsl  vertex_light_casters_point.glsl  vertex_model_loading.glsl  vertex_rgb_triangle.glsl  vertex_texture_transform.glsl  vertex_triangle.glsl  vertex_triangle_red.glsl  vertex_wooden_box.glsl
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
assimp/: build.gradle
assimp/src/main/cpp/: AndroidIOSystem.cpp  CMakeLists.txt  assimp.cpp
assimp/src/main/cpp/include/assimp/port/AndroidJNI/: AndroidIOSystem.h
gradle/wrapper/: gradle-wrapper.properties
(+97 files in other folders)
